[gd_scene load_steps=5 format=2]

[ext_resource path="res://Player2.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://H_Checks.gd" type="Script" id=3]

[sub_resource type="CylinderShape" id=1]

[node name="Player" type="Spatial"]

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crosshair" type="Control" parent="HUD"]
modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -21.0
margin_right = 21.0
margin_bottom = 21.0

[node name="No_Interact" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -7.0
margin_right = 8.0
margin_bottom = 8.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Interact" type="TextureRect" parent="HUD/Crosshair"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.45538
margin_top = -6.76404
margin_right = 7.54462
margin_bottom = 8.24196
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Crosshair"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="HUD/Crosshair"]
margin_top = 28.0
margin_right = 40.0
margin_bottom = 42.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H_Checks" type="Spatial" parent="."]
script = ExtResource( 3 )
TargetPath = NodePath("../Collider")

[node name="HeadCheck" type="RayCast" parent="H_Checks"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0 )

[node name="BodyCheck" type="RayCast" parent="H_Checks"]
enabled = true
cast_to = Vector3( 0, 0, 0 )

[node name="FootCheck" type="RayCast" parent="H_Checks"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, 0 )

[node name="Collider" type="KinematicBody" parent="."]
collision_layer = 0
script = ExtResource( 1 )

[node name="GroundCheck" type="RayCast" parent="Collider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2, 0 )
enabled = true
cast_to = Vector3( 0, -1.5, 0 )

[node name="Body" type="CollisionShape" parent="Collider"]
transform = Transform( 1, 0, 0, 0, 3, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Head" type="Spatial" parent="Collider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.18991, 0 )

[node name="Camera" type="Camera" parent="Collider/Head"]
transform = Transform( -1, 0, 3.25841e-07, 0, 1, 0, -3.25841e-07, 0, -1, 0, 0, 0 )
current = true
fov = 90.0
far = 1345.1
